--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.0.0
+  http: ^1.2.1
   shared_preferences: ^2.0.15
+  http_interceptor: ^2.0.0
+  flutter_secure_storage: ^9.0.0
   image_picker: ^1.0.0
   cupertino_icons: ^1.0.8
   geolocator: ^12.0.0 # ou la dernière version stable
-
+  flutter_image_compress: ^2.3.0
+  image: ^4.2.0
+  path_provider: ^2.0.11
+  get_it: ^7.7.0 # Ajout de l'injecteur de dépendances
+  logger: ^2.3.0 # Ajout du logger
+  jwt_decode: ^0.3.1
 
 dev_dependencies:
   flutter_test:
